--- a/leave-management-app/src/app/apply-leave/apply-leave.component.scss
+++ b/leave-management-app/src/app/apply-leave/apply-leave.component.scss
@@ -2,11 +2,32 @@
     line-height: 16px !important;
 }
 
+::ng-deep .mat-button-toggle-checked {
+    color: white !important;
+    background-color: #4c6aaf !important;
+}
+
+::ng-deep .mat-form-field-appearance-legacy .mat-form-field-infix {
+    border-top-width: 0px !important;
+}
+
+.title {
+    font-size: 30px;
+    color: #4c6aaf;
+    font-weight: bold;
+    font-family: sans-serif;
+}
+
 .pad-zero {
     padding: 0;
 }
 
 .calendar {
+    padding-top: 1%;
+}
+
+.cal-grid {
+    width: 14%;
     padding: 1%;
 }
 
@@ -14,16 +35,16 @@
     font-size: 20px;
     color: white;
     background-color: #4c6aaf;
-    border-color: #4c6aaf;
     text-align: center;
+    border: 1px solid #4c6aaf;
 }
 
 .day {
-    border: 1px solid;
+    border: 1px solid gray;
 }
 
 .date {
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .holiday {
@@ -33,4 +54,51 @@
 .cancel-btn {
     font-size: 18px;
     cursor: pointer;
+    color: gray;
+}
+
+.year {
+    font-size: 20px;
+    vertical-align: sub;
+}
+
+.next-prev-month {
+    text-align: center;
+    span {
+        font-size: 40px;
+        cursor: pointer;
+    }
+}
+
+.submit-btn {
+    margin: 5%;
+    background-color: #4c6aaf;
+    color: white;
+    cursor: pointer;
+}
+
+.create-btn {
+    background-color: #4c6aaf;
+    color: white;
+    cursor: pointer;
+}
+
+.cancel {
+    color: #4c6aaf;
+    cursor: pointer;
+}
+
+.leave-dates {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    color: #4c6aaf;
+}
+
+.leave-sl.mat-chip {
+    background-color: #f4433661 !important;
+    color: black !important;
+}
+
+.leave-cl.mat-chip {
+    background-color: #0080003d !important;
+    color: black !important;
 }
