--- a/leave-management-app/src/app/apply-leave/apply-leave.component.scss
+++ b/leave-management-app/src/app/apply-leave/apply-leave.component.scss
@@ -102,3 +102,7 @@
     background-color: #0080003d !important;
     color: black !important;
 }
+
+.selected-grid {
+    background-color: #4c6aaf45;
+}
