--- a/leave-management-app/src/app/apply-leave/apply-leave.component.html
+++ b/leave-management-app/src/app/apply-leave/apply-leave.component.html
@@ -6,7 +6,12 @@
         </div>
         <div class="ui-lg-12 ui-md-12 ui-g-12">
             <mat-form-field>
-                <input matInput placeholder="Approver" [disabled]="true" [(ngModel)]="leave.approverId">
+                <!-- <input matInput placeholder="Approver" [disabled]="true" [(ngModel)]="leave.approverId"> -->
+                <mat-select>
+                    <mat-option value="Home">
+
+                    </mat-option>
+                </mat-select>
             </mat-form-field>
         </div>
         <div class="ui-lg-12 ui-md-12 ui-g-12">
