--- a/leave-management-app/src/app/apply-leave/apply-leave.component.html
+++ b/leave-management-app/src/app/apply-leave/apply-leave.component.html
@@ -6,10 +6,10 @@
         </div>
         <div class="ui-lg-12 ui-md-12 ui-g-12">
             <mat-form-field>
-                <!-- <input matInput placeholder="Approver" [disabled]="true" [(ngModel)]="leave.approverId"> -->
-                <mat-select>
-                    <mat-option value="Home">
-
+                <mat-label>Approver</mat-label>
+                <mat-select [(ngModel)]="leave.approverId">
+                    <mat-option *ngFor="let user of allUsers" [value]="user.userId">
+                        {{user.userName}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
@@ -33,6 +33,7 @@
         </div>
         <div class="ui-lg-12 ui-md-12 ui-g-12">
             <button mat-raised-button class="create-btn" (click)="createLeave()">Create</button>
+            <button mat-raised-button class="update-btn" (click)="updateLeave()" *ngIf="this.isButtonVisible">Update</button>
             <button mat-raised-button class="submit-btn">Submit</button>
             <button mat-stroked-button class="cancel">Cancel</button>
         </div>
