--- a/leave-management-app/src/app/apply-leave/apply-leave.component.scss
+++ b/leave-management-app/src/app/apply-leave/apply-leave.component.scss
@@ -71,6 +71,13 @@
 }
 
 .submit-btn {
+    margin: 5% 5% 5% 5%;
+    background-color: #4c6aaf;
+    color: white;
+    cursor: pointer;
+}
+
+.update-btn {
     margin: 5%;
     background-color: #4c6aaf;
     color: white;
